--- a/estilos.css
+++ b/estilos.css
@@ -35,9 +35,49 @@
   .layer-4 {
     background-color: pink;
   }
-  .layer-green {
+  .layer-5 {
     background-color: green;
   }
+  .layer-6 {
+    background: #f9f5f8;
+    background-image: url("imagenes/mapa.png");
+  }
+
+  .gallery-item {
+    position: relative;
+    overflow: hidden;
+}
+.layer-7 {
+    background-color: pink;
+  }
+
+.gallery-item img {
+    transition: transform 0.3s;
+}
+
+.gallery-item:hover img {
+    transform: scale(1.1);
+}
+
+.gallery-item .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.gallery-item:hover .overlay {
+    opacity: 1;
+}
+
 /* body {
     display: grid;
     height: 100%;
