--- a/estilos.css
+++ b/estilos.css
@@ -78,6 +78,26 @@
     opacity: 1;
 }
 
+.scroll-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #fff;
+    color: #000;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 999;
+  }
+  
+  .scroll-button i {
+    line-height: 50px;
+    margin-left: 2px;
+  }
+  
 /* body {
     display: grid;
     height: 100%;
