--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,66 @@
   --font-family-sans-serif: "Montserrat", sans-serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
+@font-face {
+  font-family: 'Mons-Italic';
+  src: url('../font/Montserrat-Italic.ttf') format('truetype');
 
+}
+
+@font-face {
+  font-family: 'Mons-Black';
+  src: url('../font/Montserrat-Black.ttf') format('truetype');
+
+}
+
+@font-face {
+  font-family: 'Mons-Light';
+  src: url('../font/Montserrat-Light.ttf') format('truetype');
+
+}
+
+@font-face {
+  font-family: 'Mons-Regular';
+  src: url('../font/Montserrat-Regular.ttf') format('truetype');
+
+}
+
+@font-face {
+  font-family: 'Mons-Bold';
+  src: url('../font/Montserrat-Bold.ttf') format('truetype');
+
+}
+@font-face {
+font-family: 'Mons-ExtraBold';
+src: url('../font/Montserrat-ExtraBold.ttf') format('truetype');
+
+}
+@font-face {
+  font-family: 'Mons-Medium';
+  src: url('../font/Montserrat-Medium.ttf') format('truetype');
+  
+  }
+.Mons-Italic{
+  font-family: 'Mons-Italic';
+}
+.Mons-Black{
+  font-family: 'Mons-Black';
+}
+.Mons-Light{
+  font-family: 'Mons-Light';
+}
+.Mons-Regular{
+  font-family: 'Mons-Regular';
+}
+.Mons-Bold{
+  font-family: 'Mons-Bold';
+}
+.Mons-ExtraBold{
+  font-family: 'Mons-ExtraBold';
+}
+.Mons-Medium{
+  font-family: 'Mons-Medium';
+}
 *,
 *::before,
 *::after {
@@ -115,7 +174,7 @@
 }
 
 html {
-  font-family: sans-serif;
+  font-family: 'Mons-Regular';
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -127,11 +186,11 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Mons-Regular";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #555555;
+  color: #fffefc;
   text-align: left;
   background-image: url("../img/Mascotasfondo.png");
 
@@ -156,7 +215,7 @@ p {
   margin-top: 0;
   margin-bottom: 1rem;
   text-align: justify;
-  font-weight: bold;
+  font-size: 22px;
 }
 
 abbr[title],
@@ -251,7 +310,7 @@ pre,
 code,
 kbd,
 samp {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: 'Mons-Regular';
   font-size: 1em;
 }
 
@@ -437,26 +496,25 @@ template {
 h1,  h3, h4, h5, h6,
 .h1,  .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: "Montserrat", sans-serif;
   font-weight: 500;
   line-height: 1.2;
-  color: #2541CF;
+  color: #fffefc;
 }
 .letrasrosas{
   margin-bottom: 0.5rem;
-  font-size: 500%;
-  font-family: "Montserrat", sans-serif;
-  -webkit-text-stroke: 2px #EE2F75;
+  font-size: 560%;
+  -webkit-text-stroke: 3px #E88484;  
   color: transparent; 
+
 }
 
 h1, .h1 {
-  font-size: 2.5rem;
+  font-size: 4.5rem;
 }
 
 @media (max-width: 1200px) {
   h1, .h1 {
-    font-size: calc(1.375rem + 1.5vw) ;
+    font-size: calc(3.375rem + 1.5vw) ;
   }
 }
 
@@ -471,12 +529,12 @@ h2, .h2 {
 }
 
 h3, .h3 {
-  font-size: 1.75rem;
+  font-size: 3.75rem;
 }
 
 @media (max-width: 1200px) {
   h3, .h3 {
-    font-size: calc(1.3rem + 0.6vw) ;
+    font-size: calc(3.3rem + 0.6vw) ;
   }
 }
 
@@ -486,7 +544,7 @@ h4, .h4 {
 
 @media (max-width: 1200px) {
   h4, .h4 {
-    font-size: calc(1.275rem + 0.3vw) ;
+    font-size: calc(3.275rem + 0.3vw) ;
   }
 }
 
@@ -540,17 +598,27 @@ h6, .h6 {
 }
 
 .display-4 {
-  font-size: 3.5rem;
+  font-size: 4.9rem;
   font-weight: 300;
   line-height: 1.2;
 }
 
 @media (max-width: 1200px) {
   .display-4 {
-    font-size: calc(1.475rem + 2.7vw) ;
+    font-size: calc(2.475rem + 2.7vw) ;
   }
 }
+.display-5 {
+  font-size: 2.9rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
 
+@media (max-width: 1200px) {
+  .display-5 {
+    font-size: calc(2.575rem + 3.9vw) ;
+  }
+}
 hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -690,25 +758,25 @@ pre code {
 
 @media (min-width: 576px) {
   .container, .container-sm {
-    max-width: 540px;
+    max-width: 1140px;
   }
 }
 
 @media (min-width: 768px) {
   .container, .container-sm, .container-md {
-    max-width: 720px;
+    max-width: 1320px;
   }
 }
 
 @media (min-width: 992px) {
   .container, .container-sm, .container-md, .container-lg {
-    max-width: 960px;
+    max-width: 1560px;
   }
 }
 
 @media (min-width: 1200px) {
   .container, .container-sm, .container-md, .container-lg, .container-xl {
-    max-width: 1140px;
+    max-width: 1740px;
   }
 }
 
@@ -4402,7 +4470,6 @@ input[type="button"].btn-block {
 
 .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
   color: #fff;
-  width: 30%;
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -5652,7 +5719,6 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -5764,7 +5830,6 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -7336,6 +7401,9 @@ button.bg-dark:focus {
 .shadow-none {
   box-shadow: none !important;
 }
+.w-10 {
+  width: 10% !important;
+}
 
 .w-25 {
   width: 25% !important;
@@ -7348,7 +7416,9 @@ button.bg-dark:focus {
 .w-75 {
   width: 75% !important;
 }
-
+.w-60 {
+  width: 60% !important;
+}
 .w-100 {
   width: 100% !important;
 }
@@ -7372,7 +7442,9 @@ button.bg-dark:focus {
 .h-100 {
   height: 100% !important;
 }
-
+.h-107 {
+  height: 107% !important;
+}
 .h-auto {
   height: auto !important;
 }
@@ -7620,12 +7692,18 @@ button.bg-dark:focus {
 .p-3 {
   padding: 1rem !important;
 }
-
+.pt-0,
+.py-0 {
+  padding-top: 0em !important;
+}
+.pr-0,
+.py-0 {
+  padding-top: 0em !important;
+}
 .pt-3,
 .py-3 {
-  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
 }
-
 .pr-3,
 .px-3 {
   padding-right: 1rem !important;
@@ -9226,7 +9304,7 @@ button.bg-dark:focus {
 }
 
 .text-monospace {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !important;
+  font-family: 'Mons-Regular', monospace !important;
 }
 
 .text-justify {
@@ -9348,7 +9426,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #223DC4 !important;
+  color: #fffefc !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -9596,14 +9674,15 @@ h6,
 }
 
 .container-fluid.nav-bar, .nav-bar.container-sm, .nav-bar.container-md, .nav-bar.container-lg, .nav-bar.container-xl {
-  position: absolute;
+  position: relative;
   z-index: 9;
+  background: #000;
 }
 
 @media (max-width: 991.98px) {
   .container-fluid.nav-bar, .nav-bar.container-sm, .nav-bar.container-md, .nav-bar.container-lg, .nav-bar.container-xl {
     position: relative;
-    background: #EE2F75;
+    background: #000;
   }
   
 }
@@ -9638,6 +9717,7 @@ h6,
 
 .overlay-bottom::after {
   bottom: -1px;
+  width: 100%;
   background: url(../img/overlay-bottom.png);
 }
 
@@ -9720,7 +9800,36 @@ h6,
 .testimonial-carousel .owl-item img {
   width: 80px;
   height: 80px;
+  border-radius: 50px;
 }
+
+.act-carousel .owl-dots {
+  margin-top: 30px;
+  text-align: center;
+}
+
+.act-carousel .owl-dot {
+  position: relative;
+  display: inline-block;
+  margin: 0 5px;
+  width: 20px;
+  height: 20px;
+  border-radius: 20px;
+  background: #223DC4;
+  transition: .5s;
+}
+
+.act-carousel .owl-dot.active {
+  width: 40px;
+  background: #2541CF;
+}
+
+.act-carousel .owl-item img {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+
 
 .contact-form .help-block ul {
   margin: 0;
